--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,36 +1,38 @@
 @charset "utf-8";
-@import './utils.scss';
-@import url('./reset.css');
-@import url('./common.css');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+@import "./utils.scss";
+@import url("./reset.css");
+@import url("./common.css");
+@import url("./header.css");
+@import url("./footer.css");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
 
 @font-face {
-  font-family: 'apple';
-  src: url('../fonts/SFProKRDisplay_light.woff2') format('woff2');
+  font-family: "apple";
+  src: url("../fonts/SFProKRDisplay_light.woff2") format("woff2");
   font-weight: 300;
 }
 
 @font-face {
-  font-family: 'apple';
-  src: url('../fonts/SFProKRDisplay_regular.woff2') format('woff2');
+  font-family: "apple";
+  src: url("../fonts/SFProKRDisplay_regular.woff2") format("woff2");
   font-weight: 400;
 }
 
 @font-face {
-  font-family: 'apple';
-  src: url('../fonts/SFProKRDisplay_medium.woff2') format('woff2');
+  font-family: "apple";
+  src: url("../fonts/SFProKRDisplay_medium.woff2") format("woff2");
   font-weight: 500;
 }
 
 @font-face {
-  font-family: 'apple';
-  src: url('../fonts/SFProKRDisplay_semibold.woff2') format('woff2');
+  font-family: "apple";
+  src: url("../fonts/SFProKRDisplay_semibold.woff2") format("woff2");
   font-weight: 600;
 }
 
 @font-face {
-  font-family: 'apple';
-  src: url('../fonts/SFProKRDisplay_bold.woff2') format('woff2');
+  font-family: "apple";
+  src: url("../fonts/SFProKRDisplay_bold.woff2") format("woff2");
   font-weight: 700;
 }
 
@@ -38,9 +40,9 @@ body {
   overflow-x: hidden;
   background: #0b0b0e;
   color: #fff;
-  font-family: 'apple', sans-serif;
+  font-family: "apple", sans-serif;
   min-width: 1300px;
-  cursor: url('../images/icon/cursor.png'), auto;
+  cursor: url("../images/icon/cursor.png"), auto;
   word-break: keep-all;
 
   ::selection {
@@ -49,50 +51,6 @@ body {
   }
 
   a {
-    cursor: url('../images/icon/cursor2.png'), auto;
-  }
-}
-
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  width: 100%;
-
-  .gauge {
-    position: absolute;
-    width: 100%;
-    height: 5px;
-
-    .curr {
-      width: 0%;
-      height: 100%;
-      background: #f9be2c;
-    }
-  }
-
-  h1 {
-    position: relative;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding: 15px;
-    font-family: 'Montserrat', sans-serif;
-    color: #cec9c9;
-    font-size: 16px;
-    line-height: 1;
-    font-weight: 500;
-    text-transform: uppercase;
-  }
-}
-
-footer {
-  .copy {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    padding: 35px;
-    font-size: 22px;
-    font-family: 'Montserrat', 'apple', sans-serif;
+    cursor: url("../images/icon/cursor2.png"), auto;
   }
 }
