style: scss파일에서 introduce 파일 내용 수정

--- a/scss/section/introduce.scss
+++ b/scss/section/introduce.scss
@@ -5,10 +5,12 @@
   align-items: center;
 
   .info {
-    max-width: 700px;
+    max-width: 720px;
     margin: 150px 0;
     font-size: 28px;
     line-height: 1.5;
+    text-align: left;
+    word-break: break-word;
   }
 
   .chat_wrap {
