--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @import "./utils.scss";
 @import "./intro.css";
-@import "./introdocue.css";
+@import "./introduce.css";
 @import "./works.css";
 @import "./step.css";
 @import "./contact.css";
